# BubbaRogueFort

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
levels/: battle.level  test.level
meshes/: .gitignore  R_wing.mtl  bubba.mtl  dog.mtl  ground.mtl  house.mtl  monkey.mtl  monster.mtl  pine.mtl  player.fbx  player.mtl  streetlamp.mtl
src/: ActionMenu.cpp  ActionMenu.h  CMakeLists.txt  controls.h  main.cpp
src/cameras/: CMakeLists.txt  IdentityCamera.cpp  IdentityCamera.h
src/components/: AnimationStateHandler.cpp  AnimationStateHandler.h  CMakeLists.txt  HealthComponent.cpp  HealthComponent.h  MoveComponentWithCollision.cpp  MoveComponentWithCollision.h  PlayerCamera.cpp  PlayerCamera.h  SceneSwitchOnCollisionComponent.cpp  SceneSwitchOnCollisionComponent.h  TimedLife.cpp  TimedLife.h
src/level/: CMakeLists.txt  LevelFileReader.cpp  LevelFileReader.h
src/logic/: Attack.cpp  Attack.h  Bandit.cpp  Bandit.h  CMakeLists.txt  CrewMember.cpp  CrewMember.h  Dog.cpp  Dog.h  Enemy.cpp  Enemy.h  HealthPot.cpp  HealthPot.h  InventoryItem.cpp  InventoryItem.h  KidBandit.cpp  KidBandit.h  Player.cpp  Player.h  Stats.cpp  Stats.h
src/particleEffects/: CMakeLists.txt  CircleEffect.cpp  CircleEffect.h
src/scenes/: AnimationState.h  BattleScene.cpp  BattleScene.h  CMakeLists.txt  ExploreScene.cpp  ExploreScene.h  RogueFortScene.cpp  RogueFortScene.h  SceneHandler.cpp  SceneHandler.h  StartScene.cpp  StartScene.h  constants.h
src/ui/: ActionMenu.cpp  ActionMenu.h  CMakeLists.txt  HealthBar.cpp  HealthBar.h
